--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.26.1",
+    "@hello-pangea/dnd": "^16.3.0",
     "@hookform/resolvers": "^3.3.2",
+    "@mux/mux-node": "^7.3.2",
+    "@mux/mux-player-react": "^2.1.0",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
@@ -35,6 +40,7 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
+    "react-quill": "^2.0.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
