--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.10.7",
     "@types/node": "20.8.9",
@@ -47,6 +48,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-quill": "^2.0.0",
+    "stripe": "^14.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.5",
     "tailwindcss-animate": "^1.0.7",
